# skeleton-module

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  README_example.md  include.sh
.github/: README.md
.github/workflows/: core-build.yml  core_codestyle.yml
conf/: conf.sh.dist  my_custom.conf.dist
modules/mod-better-roll-play/: CMakeLists.txt  README.md  mod_better_roll_play.conf.dist  mod_better_roll_play.cpp
modules/mod-better-roll-play/samples/: better_rp_texts.de.txt  better_rp_texts.en.txt
modules/mod-better-roll-play/src/: BetterRPCommands.cpp  BetterRPConfig.cpp  BetterRPConfig.h  BetterRPModule.cpp  BetterRPState.cpp  BetterRPState.h
sql/: README.md
sql/data/: README.md
sql/data/characters/production/: delete_me.sql
sql/structure/: README.md
sql/world/: .gitignore
src/: MyPlayer.cpp  MyWorld.cpp  loader.h  my_module_loader.h
src/cmake/: after_ws_install.cmake
